The Mail Auto service via web

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,16 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=milad.yrmp@gmail.com
+spring.mail.password=lgkjttoyftxmeszk
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+# Your application base URL for confirmation link
+app.base-url=http://localhost:3000
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
